--- a/site/partials/header.ejs
+++ b/site/partials/header.ejs
@@ -1,8 +1,9 @@
-<link rel="stylesheet" href="/site/assets/css/header.css">
+<link rel="stylesheet" href="/assets/css/header.css">
+
 <header class="site-header">
+    <img src="/assets/img/Logo.png" alt="">
     <div class="header-buttons">
-        <button class="header-btn type-prix-btn" onclick="location.href='/type-prix'">Type Prix</button>
-        <button class="header-btn connexion-btn" onclick="location.href='/login'">Connexion</button>
         <button class="header-btn connect-btn" onclick="location.href='/connect'">Connect</button>
+        <button class="header-btn connect-btn" onclick="location.href='/profil'">Profil</button>
     </div>
 </header>
