--- a/site/views/accueil.ejs
+++ b/site/views/accueil.ejs
@@ -5,11 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="/assets/css/header.css">
+    <link rel="stylesheet" href="/assets/css/footer.css">
     <link rel="stylesheet" href="/assets/css/accueil.css">
 </head>
 <body>
     <%- include('../partials/header'); %>
-    <h1>Accueil</h1>
+    <div class="content-container">
+        <div class="search-container">
+            <input type="search" placeholder="Rechercher..." class="search-input">
+            <div class="search-buttons">
+                <button class="search-btn type-btn">Type</button>
+                <button class="search-btn prix-btn">Prix</button>
+            </div>
+        </div>
+    </div>
+    <div class="car-container">
+        <button class="car-btn">Type Voiture</button>
+    </div>
     <%- include('../partials/footer'); %>
 </body>
 </html>
