--- a/site/assets/css/footer.css
+++ b/site/assets/css/footer.css
@@ -5,14 +5,15 @@
 }
 
 .site-footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
+    position: fixed;    /* added: fix footer position */
+    bottom: 0;          /* added: position at bottom */
+    left: 0;            /* added */
+    width: 100%;        /* added */
+    padding: 1rem 2rem;
     background: #000;
     color: #fff;
-    padding: 1rem 2rem;
-    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.3);
+    text-align: center;
+    font-size: 0.9rem;
 }
 
 .footer-content {
