--- a/site/partials/footer.ejs
+++ b/site/partials/footer.ejs
@@ -2,7 +2,7 @@
 <footer class="site-footer">
   <div class="footer-content">
     <div class="footer-left">
-      <img src="/site/assets/img/logo.png" alt="logo" class="footer-logo">
+      <img src="/assets/img/logo.png" alt="logo" class="footer-logo">
     </div>
     <div class="footer-center">
       <span class="separator">|</span>
