--- a/site/views/profil.ejs
+++ b/site/views/profil.ejs
@@ -9,24 +9,25 @@
     <title>Profil</title>
 </head>
 <body>
-    <%- include('../partials/header'); %>
     <div class="profile-container">
         <div class="profile-photo-section">
-            <img src="/assets/img/default-profile.png" alt="Photo de profil" class="profile-photo">
+            <div class="profile-photo-wrapper">
+                <img src="<%= user.profilePicture || '/site/assets/img/default-profile.png' %>" alt="Photo de profil" class="profile-photo">
+            </div>
             <form action="/upload-profile-photo" method="POST" enctype="multipart/form-data" class="upload-form">
-                <input type="file" name="profilePhoto" id="profilePhoto">
-                <button type="submit">Ajouter Photo</button>
+                <input type="file" name="profilePhoto" id="profilePhoto" accept="image/*" capture="environment" style="display: none;">
+                <label for="profilePhoto" class="custom-file-label">Choisir un fichier</label>
             </form>
         </div>
         <div class="profile-info-section">
-            <h2>Informations Personnelles</h2>
+            <h2>Personal Information</h2>
             <form class="profile-info-form" action="/update-profile" method="POST">
                 <div class="form-group">
-                    <label for="email">Email :</label>
+                    <label for="email">Mail :</label>
                     <input type="email" id="email" name="email" value="<%= user.email %>" required>
                 </div>
                 <div class="form-group">
-                    <label for="password">Mot de passe :</label>
+                    <label for="password">Password :</label>
                     <input type="password" id="password" name="password" value="<%= user.password %>" required>
                 </div>
                 <!-- Vous pouvez ajouter d'autres champs ici si nécessaire -->
@@ -34,6 +35,6 @@
             </form>
         </div>
     </div>
-    <%- include('../partials/footer'); %>
+    <script src="/app.js"></script>
 </body>
 </html>
