--- a/site/views/connect.ejs
+++ b/site/views/connect.ejs
@@ -40,6 +40,6 @@
             <button class="switch-to-login" onclick="toggleForm()">Back to Login</button>
         </div>
     </div>
-    <script src="/site/assets/js/connect.js"></script>
+    <script src="/assets/js/connect.js"></script>
 </body>
 </html>
