--- a/site/partials/footer.ejs
+++ b/site/partials/footer.ejs
@@ -2,14 +2,14 @@
 <footer class="site-footer">
   <div class="footer-content">
     <div class="footer-left">
-      <img src="/assets/img/logo.png" alt="logo" class="footer-logo">
+      <img src="../assets/img/logo.png" alt="logo" class="footer-logo">
     </div>
     <div class="footer-center">
       <span class="separator">|</span>
     </div>
     <div class="footer-right">
       <div class="footer-contact">
-        <a href="/contact" class="footer-link">Contact</a>
+        <p>Contacts</p>
       </div>
       <div class="footer-links">
         <a href="https://github.com/Jonathan-p-z" class="footer-link">Jonathan Perez</a>
