--- a/site/views/accueil.ejs
+++ b/site/views/accueil.ejs
@@ -6,10 +6,9 @@
     <title>Home</title>
     <link rel="stylesheet" href="/assets/css/header.css">
     <link rel="stylesheet" href="/assets/css/footer.css">
-    <link rel="stylesheet" href="/assets/css/accueil.css">
+    <link rel="stylesheet" href="../assets/css/accueil.css">
 </head>
 <body>
-    <%- include('../partials/header'); %>
     <div class="content-container">
         <div class="search-container">
             <input type="search" placeholder="Rechercher..." class="search-input">
@@ -22,6 +21,5 @@
     <div class="car-container">
         <button class="car-btn">Type Voiture</button>
     </div>
-    <%- include('../partials/footer'); %>
 </body>
 </html>
