--- a/site/views/connect.ejs
+++ b/site/views/connect.ejs
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connexion</title>
-    <link rel="stylesheet" href="/assets/css/connect.css">
-    <link rel="stylesheet" href="/assets/css/header.css">
+    <link rel="stylesheet" href="../assets/css/connect.css">
 </head>
 <body>
     <div class="container">
