--- a/site/views/profil.ejs
+++ b/site/views/profil.ejs
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/site/assets/css/header.css">
-    <link rel="stylesheet" href="/site/assets/css/footer.css">
-    <link rel="stylesheet" href="/site/assets/css/profil.css">
+    <link rel="stylesheet" href="../assets/css/header.css">
+    <link rel="stylesheet" href="../assets/css/footer.css">
+    <link rel="stylesheet" href="../assets/css/profil.css">
     <title>Profil</title>
 </head>
 <body>
+    <%- include('../partials/header'); %>
     <div class="profile-container">
         <div class="profile-photo-section">
             <div class="profile-photo-wrapper">
@@ -24,17 +25,27 @@
             <form class="profile-info-form" action="/update-profile" method="POST">
                 <div class="form-group">
                     <label for="email">Mail :</label>
-                    <input type="email" id="email" name="email" value="<%= user.email %>" required>
+                    <input type="email" id="email" name="email" value=" Email " required>
                 </div>
                 <div class="form-group">
                     <label for="password">Password :</label>
                     <input type="password" id="password" name="password" value="<%= user.password %>" required>
+                </div>
+                <div class="form-group">
+                    <label for="gender">Genre :</label>
+                    <select id="gender" name="gender" required>
+                        <option value="" disabled <% if (!user.gender) { selected } %>>--Sélectionnez--</option>
+                        <option value="homme"  if (user.gender = 'homme') { selected } >Homme</option>
+                        <option value="femme" if (user.gender = 'femme') { selected } >Femme</option>
+                    </select>
                 </div>
                 <!-- Vous pouvez ajouter d'autres champs ici si nécessaire -->
                 <button type="submit" class="update-btn">Mettre à jour</button>
             </form>
         </div>
     </div>
+    <%- include('../partials/footer'); %>
     <script src="/app.js"></script>
+
 </body>
 </html>
