--- a/site/partials/header.ejs
+++ b/site/partials/header.ejs
@@ -1,7 +1,7 @@
-<link rel="stylesheet" href="/assets/css/header.css">
+<link rel="stylesheet" href="../assets/css/header.css">
 
 <header class="site-header">
-    <img src="/assets/img/Logo.png" alt="">
+    <img src="../assets/img/logo/Logo.png" alt="">
     <div class="header-buttons">
         <button class="header-btn connect-btn" onclick="location.href='/connect'">Connect</button>
         <button class="header-btn connect-btn" onclick="location.href='/profil'">Profil</button>
