--- a/site/views/accueil.ejs
+++ b/site/views/accueil.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../assets/css/accueil.css">
 </head>
 <body>
+    <%- include('../partials/header'); %>
     <div class="content-container">
         <div class="search-container">
             <input type="search" placeholder="Rechercher..." class="search-input">
@@ -21,5 +22,6 @@
     <div class="car-container">
         <button class="car-btn">Type Voiture</button>
     </div>
+    <%- include('../partials/footer'); %>
 </body>
 </html>
