--- a/site/partials/footer.ejs
+++ b/site/partials/footer.ejs
@@ -1,8 +1,8 @@
-<link rel="stylesheet" href="/site/assets/css/footer.css">
+<link rel="stylesheet" href="../assets/css/footer.css">
 <footer class="site-footer">
   <div class="footer-content">
     <div class="footer-left">
-      <img src="../assets/img/logo.png" alt="logo" class="footer-logo">
+      <img src="../assets/img/logo/logo.png" alt="logo" class="footer-logo">
     </div>
     <div class="footer-center">
       <span class="separator">|</span>
