--- a/site/partials/header.ejs
+++ b/site/partials/header.ejs
@@ -2,6 +2,18 @@
 
 <header class="site-header">
     <img src="../assets/img/logo/Logo.png" alt="">
+    <div class="header-center">
+        <nav class="header-nav">
+            <div class="dropdown">
+                <button class="header-btn dropdown-toggle">Marques</button>
+                <div class="dropdown-menu">
+                    <a href="/car/1" class="marque-link" data-id="1" data-nom="Renault">Renault</a>
+                    <a href="/car/2" class="marque-link" data-id="2" data-nom="BMW">BMW</a>
+                    <a href="/car/4" class="marque-link" data-id="4" data-nom="Audi">Audi</a>
+                </div>
+            </div>
+        </nav>
+    </div>
     <div class="header-buttons">
         <button class="header-btn connect-btn" onclick="location.href='/connect'">Connect</button>
         <button class="header-btn connect-btn" onclick="location.href='/profil'">Profil</button>
