--- a/site/views/accueil.ejs
+++ b/site/views/accueil.ejs
@@ -21,6 +21,27 @@
     </div>
     <div class="car-container">
         <button class="car-btn">Type Voiture</button>
+        <div class="car-images" id="car-images">
+            <img src="../assets/img/voiture/renault_zoe_1/zoe_1_white_medium.png" alt="Renault Zoe 1 - Rouge Medium" style="width: 100%; max-width: 300px;">
+        </div>
+    </div>
+    <div class="car-container">
+        <button class="car-btn">Type Voiture</button>
+        <div class="car-images" id="car-images">
+            <img src="../assets/img/voiture/renault_zoe_1/zoe_1_white_medium.png" alt="Renault Zoe 1 - Rouge Medium" style="width: 100%; max-width: 300px;">
+        </div>
+    </div>
+    <div class="car-container">
+        <button class="car-btn">Type Voiture</button>
+        <div class="car-images" id="car-images">
+            <img src="../assets/img/voiture/renault_zoe_1/zoe_1_white_medium.png" alt="Renault Zoe 1 - Rouge Medium" style="width: 100%; max-width: 300px;">
+        </div>
+    </div>
+    <div class="car-container">
+        <button class="car-btn">Type Voiture</button>
+        <div class="car-images" id="car-images">
+            <img src="../assets/img/voiture/renault_zoe_1/zoe_1_white_medium.png" alt="Renault Zoe 1 - Rouge Medium" style="width: 100%; max-width: 300px;">
+        </div>
     </div>
     <%- include('../partials/footer'); %>
 </body>
