--- a/site/partials/header.ejs
+++ b/site/partials/header.ejs
@@ -1,21 +1,17 @@
-<link rel="stylesheet" href="../assets/css/header.css">
-
-<header class="site-header">
-    <img src="../assets/img/logo/Logo.png" alt="">
-    <div class="header-center">
-        <nav class="header-nav">
-            <div class="dropdown">
-                <button class="header-btn dropdown-toggle">Marques</button>
-                <div class="dropdown-menu">
-                    <a href="/car/1" class="marque-link" data-id="1" data-nom="Renault">Renault</a>
-                    <a href="/car/2" class="marque-link" data-id="2" data-nom="BMW">BMW</a>
-                    <a href="/car/4" class="marque-link" data-id="4" data-nom="Audi">Audi</a>
-                </div>
-            </div>
-        </nav>
+<header>
+    <div class="logo">
+      <img src="/assets/img/logo/logo.png" alt="">
     </div>
-    <div class="header-buttons">
-        <button class="header-btn connect-btn" onclick="location.href='/connect'">Connect</button>
-        <button class="header-btn connect-btn" onclick="location.href='/profil'">Profil</button>
-    </div>
-</header>
+    <nav class="navbar">
+      <a href="/accueil">Accueil</a>
+      
+      <% if (!connect) { %>
+        <a href="/connect">Connexion</a>
+      <% } else { %>
+        <a href="/profil">Profil</a>
+        <a href="/logout">Déconnexion</a>
+        <a href="/panier">Panier</a>
+      <% } %>
+  
+    </nav>
+  </header>
