--- a/site/views/connect.ejs
+++ b/site/views/connect.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connexion</title>
     <link rel="stylesheet" href="/assets/css/connect.css">
+    
 </head>
 <body>
     <div class="container">
@@ -25,7 +26,7 @@
         </div>
         <div class="register-container">
             <h2 class="register-title">Register</h2>
-            <form class="register-form">
+            <form class="register-form" action="/register" method="POST">
                 <div class="form-group">
                     <label for="register-email">Email</label>
                     <input type="email" id="register-email" name="email" placeholder="Enter your email" required>
